feat(minio): script envia CSV para bucket dados-brutos via container python-test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,8 @@ services:
     working_dir: /app/src
     stdin_open: true
     tty: true
+    networks:
+    - data-network
 
 volumes:
   minio_data:
