--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,10 @@ services:
     networks:
     - data-network
 
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+
 volumes:
   minio_data:
   postgres_data:
