criacao de usuarios minio

--- a/.env
+++ b/.env
@@ -10,6 +10,14 @@ POSTGRES_PASSWORD=airflow
 POSTGRES_DB=airflow
 POSTGRES_PORT=5432
 
+# Usuário dev (readonly)
+DEV_MINIO_USER=dev
+DEV_MINIO_PASSWORD=dev123
+
+# Usuário airflow (full access)
+AIRFLOW_MINIO_USER=airflow
+AIRFLOW_MINIO_PASSWORD=airflow123
+
 # Airflow
 AIRFLOW_UID=50000
 AIRFLOW_GID=50000
