--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,11 +66,15 @@ services:
       AIRFLOW__CORE__EXECUTOR: ${AIRFLOW__CORE__EXECUTOR}
       AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW__CORE__FERNET_KEY}
+      PYTHONPATH: /opt/airflow/dags
+      PYTHONWARNINGS: ignore::DeprecationWarning
     command: ["airflow", "webserver"]
     volumes:
       - ./src:/opt/airflow/dags
       - ./datasets:/opt/airflow/datasets
       - ./logs:/opt/airflow/logs
+      - ./outputs:/opt/airflow/outputs
+      - ./sandbox:/opt/airflow/sandbox
     ports:
       - "8080:8080"
     depends_on:
@@ -88,11 +92,15 @@ services:
       AIRFLOW__CORE__EXECUTOR: ${AIRFLOW__CORE__EXECUTOR}
       AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       AIRFLOW__CORE__FERNET_KEY: ${AIRFLOW__CORE__FERNET_KEY}
+      PYTHONPATH: /opt/airflow/dags
+      PYTHONWARNINGS: ignore::DeprecationWarning
     command: ["airflow", "scheduler"]
     volumes:
       - ./src:/opt/airflow/dags
       - ./datasets:/opt/airflow/datasets
       - ./logs:/opt/airflow/logs
+      - ./outputs:/opt/airflow/outputs
+      - ./sandbox:/opt/airflow/sandbox
     depends_on:
       - airflow-init
     restart: always
