airflow tem permissoes para executar tasks e dags

--- a/.env
+++ b/.env
@@ -10,13 +10,9 @@ POSTGRES_PASSWORD=airflow
 POSTGRES_DB=airflow
 POSTGRES_PORT=5432
 
-# Usuário dev (readonly)
-DEV_MINIO_USER=dev
-DEV_MINIO_PASSWORD=dev123
-
-# Usuário airflow (full access)
-AIRFLOW_MINIO_USER=airflow
-AIRFLOW_MINIO_PASSWORD=airflow123
+# Airflow deve usar as mesmas credenciais do root
+AIRFLOW_MINIO_USER=admin
+AIRFLOW_MINIO_PASSWORD=password123
 
 # Airflow
 AIRFLOW_UID=50000
